change app description

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Cliver - AI Background Research</title>
-    <meta name="description" content="AI-powered customer background research tool with multi-model analysis, real-time insights, and intelligent screening capabilities." />
+    <title>Cliver - AI-Powered Customer Screening for DNA Providers</title>
+    <meta name="description" content="Speed up customer onboarding and follow-up screening with automated customer reports. Flag potential issues in minutes, not hours." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
