--- a/designs/business-efficiency/index-publisher.html
+++ b/designs/business-efficiency/index-publisher.html
@@ -238,6 +238,18 @@
             line-height: 1.4;
         }
 
+        .hero-footnote {
+            margin-top: 32px;
+            max-width: 520px;
+        }
+
+        .hero-footnote .footnote-text {
+            font-size: 12px;
+            color: var(--text-muted);
+            line-height: 1.5;
+            font-style: italic;
+        }
+
         /* Demo Card */
         .demo-card {
             background: var(--bg-surface);
@@ -426,24 +438,6 @@
             background: var(--accent-hover);
         }
 
-        /* Footnote */
-        .footnote-section {
-            padding: 40px 0;
-            background: var(--bg-primary);
-            border-top: 1px solid var(--border);
-        }
-
-        .footnote-content {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: center;
-        }
-
-        .footnote-text {
-            font-size: 13px;
-            color: var(--text-muted);
-            line-height: 1.5;
-        }
 
         /* Footer */
         .footer {
@@ -642,6 +636,11 @@
                             <div class="stat-label">Faster Decisions</div>
                         </div>
                     </div>
+                    <div class="hero-footnote">
+                        <p class="footnote-text">
+                            Cost reduction based on comparison against human reviewers with experience in biosecurity on the task of deciding whether to ship/follow-up/deny orders based solely on publicly available information. Forthcoming publication.
+                        </p>
+                    </div>
                 </div>
                 <div class="demo-card" id="demo">
                     <div class="demo-header">
@@ -727,15 +726,6 @@
         </div>
     </section>
 
-    <section class="footnote-section">
-        <div class="container">
-            <div class="footnote-content">
-                <p class="footnote-text">
-                    Cost reduction based on comparison against human reviewers with experience in biosecurity on the task of deciding whether to ship/follow-up/deny orders based solely on publicly available information. Forthcoming publication.
-                </p>
-            </div>
-        </div>
-    </section>
 
     <footer class="footer">
         <div class="container">
